<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_monitor"
        android:icon="@drawable/ic_monitor"
        android:title="@string/title_monitor" />
    <item
        android:id="@+id/navigation_detection"
        android:icon="@drawable/ic_detection"
        android:title="@string/title_detection" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
